test/regress/coverage-annotate-valexpr-eof.test
; Coverage test for annotate.cc
; Valuation expression hits EOF without closing parentheses

2024/01/15 Test
    Assets:Stocks    10 AAPL ((expr
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Stocks    10 AAPL ((expr
                   ^^^^^^^^^^^^^^
Error: Commodity valuation expression lacks closing parentheses
end test
